# GuildWarsPartySearch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile-Bot  Dockerfile-Server  GuildWarsPartySearch.sln  README.md
.github/workflows/: bot_alpine.yaml  content-deploy.yaml  docker-deploy-nodejs.yaml  docker-deploy.yaml  test.yaml
GuildWarsPartySearch/: BuildDockerImage.ps1  Config.Debug.json  Config.Local.json  Config.Production.json  Config.Release.json  Config.json  DeployToVM.ps1  Dockerfile  GuildWarsPartySearch.Server.csproj  README.md  RunDockerImage.ps1  extract-container-db.sh
GuildWarsPartySearch.Bot/: CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  README.md  async.h  build.bat  build.sh  check_and_update_gw_keys.bat  check_and_update_gw_keys.sh  config.example.sh  daily_quests.h  gw-helper.c  gw_constants.h  main.cpp  redeploy.sh  replace_friend.py  run.sh  run_docker_container.bat
GuildWarsPartySearch.Bot/Dependencies/easywsclient/: easywsclient.cpp  easywsclient.hpp
GuildWarsPartySearch.Bot/data/: gw_37440.pub
GuildWarsPartySearch.BotUploader/: CMakeLists.txt
GuildWarsPartySearch.BotUploader/header/: PartyWindowScraper.h  Utils.h  WebSocketClient.h
GuildWarsPartySearch.BotUploader/header/payloads/: PartySearch.h  PartySearchEntry.h
GuildWarsPartySearch.BotUploader/source/: PartyWindowScraper.cpp  Utils.cpp  WebSocketClient.cpp  dllmain.cpp
GuildWarsPartySearch.BotUploader/source/payloads/: PartySearch.cpp  PartySearchEntry.cpp
GuildWarsPartySearch.Common/: GuildWarsPartySearch.Common.csproj
GuildWarsPartySearch.Common/Converters/: CampaignJsonConverter.cs  CampaignTypeConverter.cs  ContinentJsonConverter.cs  ContinentTypeConverter.cs  MapJsonConverter.cs  MapTypeConverter.cs  ProfessionJsonConverter.cs  ProfessionTypeConverter.cs  RegionJsonConverter.cs  RegionTypeConverter.cs
GuildWarsPartySearch.Common/Models/GuildWars/: Campaign.cs  Continent.cs  Map.cs  Profession.cs  Region.cs
GuildWarsPartySearch.FrontEnd/: BuildAndUploadContent.ps1  GuildWarsPartySearch.FrontEnd.csproj
GuildWarsPartySearch.FrontEnd/Content/: app.js  index.html  stylesheet.css
GuildWarsPartySearch.FrontEnd/Content/Scripts/: scripts.js
GuildWarsPartySearch.FrontEnd/Content/data/: 0.json  1.json  2.json  3.json  4.json  5.json  professions.json
GuildWarsPartySearch.FrontEnd/Content/scripts/: scripts.js
GuildWarsPartySearch.FrontEnd/Scripts/: BuildAndUploadContent.ps1
GuildWarsPartySearch.NodeJSServer/: .gitignore  Dockerfile  Dockerfile-Local  README.md  build-local.ps1  config.example.json  docker-compose.yml  index.html  index.mjs  index.scss  logs.sh  package-lock.json  package.json  redeploy.sh  run.sh  server.mjs  vite.config.js
GuildWarsPartySearch.NodeJSServer/scripts/: regex_test.js
GuildWarsPartySearch.NodeJSServer/src/css/: index.scss  mobile.scss  utilities.scss
GuildWarsPartySearch.NodeJSServer/src/data/: 0.json  1.json  2.json  3.json  4.json  5.json  maps.json
GuildWarsPartySearch.NodeJSServer/src/js/: DailyQuest.class.mjs  PartySearch.class.mjs  array_functions.mjs  assert.mjs  auth.mjs  chat_filter_regexes.txt  gw_constants.mjs  lz-string.min.mjs  networking.mjs  sleep.mjs  spam_filter.mjs  string_functions.mjs  websocket_client.mjs  (+1 more)
GuildWarsPartySearch.Tests/: GuildWarsPartySearch.Tests.csproj
GuildWarsPartySearch.Tests/Infra/: TestHostLifetime.cs  TestLoggerWrapper.cs
GuildWarsPartySearch/Attributes/: DoNotInjectAttribute.cs  OptionsNameAttribute.cs  WebSocketConverterAttribute.cs
GuildWarsPartySearch/BackgroundServices/: ContentRetrievalService.cs
GuildWarsPartySearch/Converters/: Base64ToCertificateConverter.cs  JsonWebSocketMessageConverter.cs  NoneConverter.cs  NoneWebsocketMessageConverter.cs  PostPartyRequestWebsocketMessageConverter.cs  PostPartyResponseWebsocketMessageConverter.cs  TextWebSocketMessageConverter.cs  WebSocketMessageConverter.cs
GuildWarsPartySearch/Endpoints/: CharactersController.cs  GetPartySearch.cs  Kill.cs  LiveFeed.cs  ModelsController.cs  PartySearchController.cs  PostPartySearch.cs  StatusController.cs  WebSocketRouteBase.cs
GuildWarsPartySearch/Extensions/: HttpContextExtensions.cs  ServiceCollectionExtensions.cs  WebApplicationBuilderExtensions.cs  WebApplicationExtensions.cs
GuildWarsPartySearch/Filters/: AdminPermissionRequired.cs  ApiKeyProtected.cs  ApiWhitelistFilter.cs  BotPermissionRequired.cs  DecodeUrlFilterAttribute.cs  ForbiddenResponseActionResult.cs  IpWhitelistFilter.cs  PermissionFilterBase.cs  RequireSsl.cs  ReturnBadRequestOnDataBindingFailureAttribute.cs  SimpleStringTokenFilterAttribute.cs  UserAgentRequired.cs
GuildWarsPartySearch/HttpModules/: ContentModule.cs
GuildWarsPartySearch/Launch/: Program.cs  ServerConfiguration.cs  WebSocketEndpointsDocumentFilter.cs
GuildWarsPartySearch/Middleware/: CorrelationVectorMiddleware.cs  HeaderLoggingMiddleware.cs  IPExtractingMiddleware.cs  LoggingEnrichmentMiddleware.cs  PermissioningMiddleware.cs
GuildWarsPartySearch/Models/: ApiKey.cs  DistrictLanguage.cs  DistrictRegion.cs  HardModeState.cs  PartySearch.cs  PartySearchEntry.cs  PermissionLevel.cs  ValueCache.cs  WebSocketConverterRequest.cs  WebSocketConverterResponse.cs
GuildWarsPartySearch/Options/: ApiWhitelistOptions.cs  AzureCredentialsOptions.cs  BotHistoryDatabaseOptions.cs  ContentOptions.cs  EnvironmentOptions.cs  IAzureBlobStorageOptions.cs  IAzureTableStorageOptions.cs  IpWhitelistOptions.cs  IpWhitelistTableOptions.cs  PartySearchDatabaseOptions.cs  PartySearchTableOptions.cs  SQLiteDatabaseOptions.cs  ServerOptions.cs  StorageAccountOptions.cs  TableStorageOptions.cs  TelemetryOptions.cs  TextProcessorOptions.cs
GuildWarsPartySearch/Properties/: launchSettings.json
GuildWarsPartySearch/Scheduler/: TaskWithExpiryScheduler.cs
GuildWarsPartySearch/ServerHandlers/: ConnectionMonitorHandler.cs  ContentManagementHandler.cs  StartupHandler.cs
GuildWarsPartySearch/Tcp/: ConnectionMonitorHandler.cs
GuildWarsPartySearch/Telemetry/: Mark4xxAsSuccessfulTelemetryInitializer.cs  WebSocketTelemetryProcessor.cs
(+62 files in other folders)
